<resources>
    <string name="app_name">MathMind</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Math-Mind Scoreboard</string>
    <string name="nav_header_subtitle">serdarselcuk61@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Log out</string>

    <string name="menu_home">MATH-MIND</string>
    <string name="menu_guesser">Guesser</string>
    <string name="menu_feedBacker">FeedBacker</string>
    <string name="guess_header">GUESSER</string>
    <string name="guess_subText">The player will actively make assumptions to determine the number held by the application. Please note that the number will be greater than 999 and will not contain any repeated digits.</string>
    <string name="feedBacker_header">FEEDBACKER</string>
    <string name="feedBacker_subText">The player will be passive and will provide feedback to the application. Please note that the number you keep in your mind should be greater than 999 and should not contain any repeated digits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_on_button">Sign On</string>
    <string name="log_in_button">Log In</string>
    <string name="enter_name">Enter your user name</string>
    <string name="enter_password">Enter your password</string>
    <string name="guess">Guess</string>
    <string name="guessed_numbers_list_header">Guessed numbers history</string>
    <string name="turn_count"> turn: %1$d</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign_with_digit">+ %1$d</string>
    <string name="minus_sign_with_digit">- %1$d</string>
    <string name="username">userName</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="email_address">Email address</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="OK_BUTTON">OK</string>
    <string name="date_pattern">yyyy-MM-dd</string>
    <string name="empty_string" />
    <string name="please_login_with">You can login with your user name and password</string>
    <string name="user_saved">USER CREATED!</string>
    <string name="please_try_later">Please try again later</string>
    <string name="user_failed">User creation failed!</string>
    <string name="game_end">GAME END!</string>
    <string name="you_win">Congratulations You Won, your point is: %1$d</string>
    <string name="i_win">Thanks for playing: </string>
    <string name="sign_on_header">SIGN ON</string>
    <string name="fragment_login">Login</string>
    <string name="feedback_numbers_list_header">FeedBack history</string>
    <string name="done">DONE</string>
    <string name="wait_for_number_to_evaluate">Wait for number to evaluate</string>
    <string name="ready">READY!</string>
    <string name="wait">WAIT</string>
    <string name="get_ready">Get Ready!</string>
    <string name="hold_a_number">Hold a number. I will try to guess and wait for your feedback. You can provide it in \"+\" for each digits in correct order and in \"-\" for each in wrong place</string>
<string name="sign_out_description">Are you sure you want to sign out?</string>
    <string name="sign_out_title">Signing out!</string>
    <string name="user_score">%1$s Score: %2$d</string>
    <string name="placed_digits">Placed digits</string>
    <string name="non_placed_digits">Non-placed digits</string>
    <string name="undo">Undo</string>
    <string name="do_you_want_to_move_back_to_this_feedback">Do you want to move back to this feedback?</string>
    <string name="wrong_feedback">Wrong feedback?</string>
</resources>