<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.mathmind.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_login_to_signOn"
            app:destination="@id/signOn" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mathmind.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_nav_home_to_nav_guesser"
            app:destination="@id/nav_guesser" />
        <action
            android:id="@+id/action_nav_home_to_nav_feedbacker"
            app:destination="@id/nav_feedbacker" />
    </fragment>

    <fragment
        android:id="@+id/nav_guesser"
        android:name="com.example.mathmind.ui.guess.GuesserFragment"
        android:label="@string/menu_guesser"
        tools:layout="@layout/fragment_guesser" >

    </fragment>

    <fragment
        android:id="@+id/nav_feedbacker"
        android:name="com.example.mathmind.ui.feedbacker.FeedBackerFragment"
        android:label="@string/menu_feedBacker"
        tools:layout="@layout/fragment_feedbacker" >

    </fragment>
    <fragment
        android:id="@+id/signOn"
        android:name="com.example.mathmind.SignOn"
        android:label="fragment_sign_on"
        tools:layout="@layout/fragment_sign_on" >
        <action
            android:id="@+id/action_signOn_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
</navigation>