<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ImageButton
        android:id="@+id/guesser_button"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/math_board_1"
        android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/feedbackerButton"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/math_board_2"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guesser_button"
        />

    <TextView
        android:id="@+id/header_guess"
        android:text="@string/guess_header"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guesser_button"
        app:layout_constraintTop_toTopOf="@+id/guesser_button" />

    <TextView
        android:id="@+id/subtitle_guess"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/guess_subText"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/header_guess"
        app:layout_constraintTop_toBottomOf="@+id/header_guess" />

    <TextView
        android:id="@+id/header_feedbacker"
        android:textSize="50sp"
        android:text="@string/feedBacker_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/feedbackerButton"
        app:layout_constraintTop_toTopOf="@+id/feedbackerButton" />

    <TextView
        android:id="@+id/subtitle_feedbacker"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:text="@string/feedBacker_subText"
        app:layout_constraintStart_toStartOf="@+id/header_feedbacker"
        app:layout_constraintTop_toBottomOf="@+id/header_feedbacker" />
</androidx.constraintlayout.widget.ConstraintLayout>